src/main/java/com/example/bookclub/errors/UserPasswordBadRequestException.java
package com.example.bookclub.errors;

public class UserPasswordBadRequestException extends RuntimeException {
    public UserPasswordBadRequestException() {
        super("Password bad request");
    }
}
